# djinn

./: .gitignore  .gitmodules  DESIGN.md  EXPLOITS_EASY  EXPLOITS_MISSED  EXPLOITS_NEW.txt  EXPLOITS_PROBLEM_DEPENDENT  EXPLOITS_PROBLEM_INDEPENDENT  EXPLOITS_SIMPLE  EXPLOITS_UNDERREP  EXPLOIT_TYPES.txt  OFFLINE_VERIFICATION.md  README.md  TODO.md  eval_workflows.md  generate_skip_tests_problems.py  output.txt  pyproject.toml  test_migration_validation.py  test_verifier.py
analysis/: analysis_plan.md
djinn/agent/: benchmark_models.py  eval_openai_api.py  logits_processors.py  merge_adapter.py  train_agent.py  train_agent_byu.py  train_agent_byu_small.py  train_agent_skiptest.py  train_agent_unsloth.py  train_sft_exploits.py
djinn/analysis/: plot_frustration_scaling.py
djinn/core/: __init__.py  analysis.py  cli.py  evaluator.py  exporter.py  paths.py  problem.py  registry.py  reward.py  sandbox_defs.py  scaffolder.py
djinn/generation/: README.md  __init__.py  evaluation.py  few_shot_examples.yaml  generator.py  generator_utils.py  improvement.py  migration.py  modules.py  prompts.py  reference_assets.py  signatures.py  verifier.py  verifier_improvement.py
djinn/nulls/: syntax_error.py
djinn/probe/: __init__.py  eval_saved_probes.py  extract_latents.py  prepare_dataset.py  prompts.py  train_probes.py
djinn/sandbox/: daemon_bridge.py  offline_verification_service.py  runner.py  secure_verifier.py  validation_service.py  verification_service.py
docs/: adding_insecure_verifiers.md  frustration_scaling_study.md
examples/: generate_problem.py
notebooks/: problem_testing.ipynb
optimized_generators/: eval_optimized_generator_v1_metadata.json  eval_optimized_generator_v1_pipeline.json  eval_optimized_v2_metadata.json  eval_optimized_v2_pipeline.json  reward_hacking_v1_metadata.json  reward_hacking_v1_pipeline.json
probe/: __init__.py  extract_latents.py  prepare_dataset.py  prompts.py  train_probes.py
scraps/: loss_diff.diff
(+168 files in other folders)
