[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "djinn-framework"
version = "0.1.0"
authors = [
    { name="David Johnston" },
]
description = "A framework for authoring, validating and distributing programming problems with intended solutions and exploits."
readme = "README.md"
requires-python = ">=3.11, <3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML",
    "datasets",
    "huggingface-hub",
    "e2b-code-interpreter",
    "python-dotenv",
    "dspy-ai",
    "openai",
    "trl",
    "vllm>=0.10.0",
    "verifiers[train]==0.1.6post0",
    "torch>=2.8.0",
    "accelerate>=1.10.1",
    "peft>=0.17.1",
]

[project.urls]
"Homepage" = "https://github.com/EleutherAI/djinn"
"Bug Tracker" = "https://github.com/EleutherAI/djinn/issues"

[project.scripts]
djinn = "djinn.core.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["djinn*"] 
